compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_constructor_name_with_multiple_fields.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble(a) {\n  field: Int,\n  other: a\n}\n"
---
----- SOURCE CODE

pub type Wibble(a) {
  field: Int,
  other: a
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:3
  │  
3 │ ╭   field: Int,
4 │ │   other: a
  │ ╰──────────^ I was not expecting this

Each custom type variant must have a constructor:

pub type Wibble {
  Wibble(
    field: Int,
    other: a,
  )
}
