compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_todo_constant_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: pub const wibble = todo as
---
----- SOURCE CODE
pub const wibble = todo as

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:25
  │
1 │ pub const wibble = todo as
  │                         ^^ I was expecting to see a constant expression after this `as`
