compiler-core/src/parse/snapshots/gleam_core__parse__tests__module_constant_called_as_record_constructor.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble {\n  Wibble(Int)\n}\n\npub const wibble = Wibble\npub const invalid = wibble(1)\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int)
}

pub const wibble = Wibble
pub const invalid = wibble(1)


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:7:21
  │
7 │ pub const invalid = wibble(1)
  │                     ^^^^^^^^^ Functions can only be called within other functions
