compiler-core/src/parse/snapshots/gleam_core__parse__tests__module_qualified_function_call_at_module_scope.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nio.println(\"wibble\")\n"
---
----- SOURCE CODE

io.println("wibble")


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ io.println("wibble")
  │ ^^^^^^^^^^^^^^^^^^^^ Functions can only be called within other functions
