compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_unsupported_attributes_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1664
expression: "\ntype Wibble {\n    @external(erlang, \"one\", \"two\")\n    @target(erlang)\n    @internal\n    Wibble1\n}\n"
---
----- SOURCE CODE

type Wibble {
    @external(erlang, "one", "two")
    @target(erlang)
    @internal
    Wibble1
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │  
3 │ ╭     @external(erlang, "one", "two")
4 │ │     @target(erlang)
5 │ │     @internal
  │ ╰─────────────^ This attribute cannot be used on a variant.

Hint: Did you mean `@deprecated`?
