compiler-core/src/parse/snapshots/gleam_core__parse__tests__nested_block.snap
---
source: compiler-core/src/parse/tests.rs
expression: "{ 1 { 1.0 2.0 } 3 }"
---
[
    Expression(
        Block {
            location: SrcSpan {
                start: 0,
                end: 19,
            },
            statements: [
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 2,
                            end: 3,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
                Expression(
                    Block {
                        location: SrcSpan {
                            start: 4,
                            end: 15,
                        },
                        statements: [
                            Expression(
                                Float {
                                    location: SrcSpan {
                                        start: 6,
                                        end: 9,
                                    },
                                    value: "1.0",
                                    float_value: NotNan(
                                        1.0,
                                    ),
                                },
                            ),
                            Expression(
                                Float {
                                    location: SrcSpan {
                                        start: 10,
                                        end: 13,
                                    },
                                    value: "2.0",
                                    float_value: NotNan(
                                        2.0,
                                    ),
                                },
                            ),
                        ],
                    },
                ),
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 16,
                            end: 17,
                        },
                        value: "3",
                        int_value: 3,
                    },
                ),
            ],
        },
    ),
]
